WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304430
REGRESSION(
304567@main
): Broke playstation build
https://bugs.webkit.org/show_bug.cgi?id=304430
Summary
REGRESSION(304567@main): Broke playstation build
Alejandro G. Castro
Reported
2025-12-18 12:41:01 PST
We made a mistake in the switch checking the display types.
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2025-12-18 12:42:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55643
EWS
Comment 2
2025-12-18 16:40:09 PST
Committed
304714@main
(1f66c78d1044): <
https://commits.webkit.org/304714@main
> Reviewed commits have been landed. Closing PR #55643 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-18 16:41:13 PST
<
rdar://problem/166833476
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug