REGRESSION(304567@main): Broke playstation build https://bugs.webkit.org/show_bug.cgi?id=304430

Reviewed by Jonathan Bedard.

We made a mistake in the switch checking the display types.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::SwapChain::SwapChain):

Canonical link: https://commits.webkit.org/304714@main