Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp
@@ -679,6 +679,10 @@ AcceleratedSurface::SwapChain::SwapChain(uint64_t surfaceID)
     case PlatformDisplay::Type::Default:
         break;
 #endif // PLATFORM(GTK) || OS(ANDROID)
+#if PLATFORM(PLAYSTATION)
+    case PlatformDisplay::Type::Surfaceless:
+        break;
+#endif // PLATFORM(PLAYSTATION)
     }
 }
 
